--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a href="https://en.wikipedia.org/wiki/J._M._W._Turner">
           Joseph Mallord William Turner</a
         >
-        <div class="bio">
+        <div id="bio2" class="bio">
           Joseph Mallord William Turner (23 April 1775 – 19 December 1851),
           known as J. M. W. Turner and contemporarily as William Turner, was an
           English Romantic painter, printmaker and water colourist. He is known
